--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <th> <img src="about.png"</th>
                 </tr>
             </thead>
+        </table>
         <img src="csc106_banner.jpg">
             
         <h1>Welcome to my Page!
