--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
         <title> My Portfolio <br> Jimmy Zhang </title>
     </head>
     <body>
+        </tr>
+            </thead>
+        </table>
         <img src="csc106_banner.jpg">
-            </ul>
+            </tr>
+            </thead>
+        </table>
+</ul>
         
         <table>
             <thead>
