--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <table>
             <thead>
                 <tr>
-                    <th> <img src="home.png"</th>
+                    <th> <a href="http://home.web.cern.ch/topics/birth-web">Read more about the history of HTML
+            <p>
+        <img src="img src="home.png"</th>" 
+        </p>
+        </a>
                     <th> <img src="javascripts.png"</th>
                     <th> <img src="apps.png"</th>
                     <th> <img src="about.png"</th>
