--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
         <table>
             <thead>
                 <tr>
-                    <th> <a href="http://home.web.cern.ch/topics/birth-web">Read more about the history of HTML
+                    <th> <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/">Home
             <p>
         <img src="img src="home.png"</th>" 
         </p>
         </a>
-                    <th> <img src="javascripts.png"</th>
+                    <th> <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/javascripts.html">Home
+            <p>
+        <img src="img src="javascripts.png"</th>" 
+        </p>
+        </a>
                     <th> <img src="apps.png"</th>
                     <th> <img src="about.png"</th>
                 </tr>
