--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <table>
             <thead>
                 <tr>
-                    <th> <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/">Home
+                    <th> <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/">
             <p>
         <img src="img src="home.png"</th>" 
         </p>
         </a>
-                    <th> <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/javascripts.html">Home
+                    <th> <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/javascripts.html">
             <p>
         <img src="img src="javascripts.png"</th>" 
         </p>
