--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
         <table>
             <thead>
                 <tr>
-                    <th> <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/">
+                    <th>
+                        <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/">
             <p>
-        <img src="img src="home.png"</th>" 
+        <img src="home.png"</th>" 
         </p>
         </a>
-                    <th> <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/javascripts.html">
+                    <th> 
+                        <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/javascripts.html">
             <p>
-        <img src="img src="javascripts.png"</th>" 
+        <img src="javascripts.png"</th>" 
         </p>
         </a>
                     <th> <img src="apps.png"</th>
