--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <th>
                         <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/">
             <p>
-        <img src="home.png"</th>" 
+        <img src="home.png"</th>
         </p>
         </a>
                     <th> 
                         <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/javascripts.html">
             <p>
-        <img src="javascripts.png"</th>" 
+        <img src="javascripts.png"</th>
         </p>
         </a>
                     <th> <img src="apps.png"</th>
