--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
                         <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/javascripts.html">
         <img src="javascripts.png"</th>
         </a>
-                    <th> <img src="apps.png"</th>
-                    <th> <img src="about.png"</th>
+                    <th> 
+                         <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/apps.html">
+        <img src="apps.png"</th>
+        </a>
+                    <th> 
+                         <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/about.html">
+        <img src="about.png"</th>
+        </a>
                 </tr>
             </thead>
         </table>
