--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <thead>
                 <tr>
                     <th>
-                        <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/">
+                        <a href="https://xxxseraphxxx.github.io/jimmyzhang1/">
         <img src="home.png"</th>
         </a>
                     <th> 
-                        <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/javascripts.html">
+                        <a href="https://xxxseraphxxx.github.io/jimmyzhang1/javascripts.html">
         <img src="javascripts.png"</th>
         </a>
                     <th> 
-                         <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/apps.html">
+                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/apps.html">
         <img src="apps.png"</th>
         </a>
                     <th> 
-                         <a href="https://xxxseraphxxx.github.io/jimmyzhang123456/about.html">
+                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/about.html">
         <img src="about.png"</th>
         </a>
                 </tr>
