--- a/javascripts.html
+++ b/javascripts.html
@@ -17,10 +17,22 @@
         <table>
             <thead>
                 <tr>
-                    <th> <img src="home.png"</th>
-                    <th> <img src="javascripts.png"</th>
-                    <th> <img src="apps.png"</th>
-                    <th> <img src="about.png"</th>
+                    <th>
+                        <a href="https://xxxseraphxxx.github.io/jimmyzhang1/">
+        <img src="home.png"</th>
+        </a>
+                    <th> 
+                        <a href="https://xxxseraphxxx.github.io/jimmyzhang1/javascripts.html">
+        <img src="javascripts.png"</th>
+        </a>
+                    <th> 
+                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/apps.html">
+        <img src="apps.png"</th>
+        </a>
+                    <th> 
+                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/about.html">
+        <img src="about.png"</th>
+        </a>
                 </tr>
             </thead>
         </table>
