--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                 <tr>
                     <th>
                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/">
-        <img src="home.png"</th>
+        <img src="home.png"></th>
         </a>
                     <th> 
                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/javascripts.html">
-        <img src="javascripts.png"</th>
+        <img src="javascripts.png"></th>
         </a>
                     <th> 
                          <a href="https://xxxseraphxxx.github.io/jimmyzhang1/apps.html">
-        <img src="apps.png"</th>
+        <img src="apps.png"></th>
         </a>
                     <th> 
                          <a href="https://xxxseraphxxx.github.io/jimmyzhang1/about.html">
-        <img src="about.png"</th>
+        <img src="about.png"></th>
         </a>
                 </tr>
             </thead>
