--- a/apps.html
+++ b/apps.html
@@ -36,7 +36,7 @@
                 </tr>
             </thead>
         </table>
-        <h1>Welcome to my Page!
+        <h1>Welcome to my apps Page! Here are so game that develop so enjoy!
         </h1>
        
     </body>
