--- a/javascripts.html
+++ b/javascripts.html
@@ -36,7 +36,7 @@
                 </tr>
             </thead>
         </table>
-        <h1>Welcome to my Page!
+        <h1>Welcome to my Page! here are some javascripts that I wrote below!
         </h1>
         
     </body>
