--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </table>
         <h1>Welcome to my Page!
         </h1>
-        <p> welcome to this website where everything here will be about me and what I like to do. when i was in highschool I alway to play League of legend to the point where I want to work at Riot Game as a developer.
+        <p> welcome to this website where everything here will be about me and what I like to do. When I was in highschool I alway to play League of legend to the point where I want to work at Riot Game as a developer.
         </p>
     </body>
 </html>
