--- a/apps.html
+++ b/apps.html
@@ -36,8 +36,9 @@
                 </tr>
             </thead>
         </table>
-        <h1>Welcome to my apps Page! Here are so game that develop so enjoy!
+        <h1>Welcome to my apps Page! 
         </h1>
+<p>Here are so game that develop so enjoy!</p>
        
     </body>
 </html>
