--- a/javascripts.html
+++ b/javascripts.html
@@ -36,8 +36,8 @@
                 </tr>
             </thead>
         </table>
-        <h1>Welcome to my Page! here are some javascripts that I wrote below!
+        <h1>Welcome to my Page! 
         </h1>
-        
+    <p>Here are some javascripts that I wrote below!</p>
     </body>
 </html>
