--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <tr>
                     <th>
                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/">
-        <img src="home1.png"></th>
+        <img src="home1.jpg"></th>
         </a>
                     <th> 
                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/javascripts.html">
