--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         </a>
                     <th> 
                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/javascripts.html">
-        <img src="javascripts.png"></th>
+        <img src="javascripts1.jpg"></th>
         </a>
                     <th> 
                          <a href="https://xxxseraphxxx.github.io/jimmyzhang1/apps.html">
-        <img src="apps.png"></th>
+        <img src="app1.jpg"></th>
         </a>
                     <th> 
                          <a href="https://xxxseraphxxx.github.io/jimmyzhang1/about.html">
-        <img src="about.png"></th>
+        <img src="about1.jpg"></th>
         </a>
                 </tr>
             </thead>
