--- a/javascripts.html
+++ b/javascripts.html
@@ -18,20 +18,20 @@
             <thead>
                 <tr>
                     <th>
-                        <a href="https://xxxseraphxxx.github.io/jimmyzhang1/">
-        <img src="home.png"></th>
+                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/">
+        <img src="home1.jpg"></th>
         </a>
                     <th> 
                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/javascripts.html">
-        <img src="javascripts.png"></th>
+        <img src="javascripts1.jpg"></th>
         </a>
                     <th> 
                          <a href="https://xxxseraphxxx.github.io/jimmyzhang1/apps.html">
-        <img src="apps.png"></th>
+        <img src="app1.jpg"></th>
         </a>
                     <th> 
                          <a href="https://xxxseraphxxx.github.io/jimmyzhang1/about.html">
-        <img src="about.png"></th>
+        <img src="about1.jpg"></th>
         </a>
                 </tr>
             </thead>
