--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         </tr>
             </thead>
         </table>
-        <img src="csc106_banner.jpg">
+        <img src="myBanner.jpg">
             </tr>
             </thead>
         </table>
