--- a/apps.html
+++ b/apps.html
@@ -8,7 +8,8 @@
         </tr>
             </thead>
         </table>
-        <img src="csc106_banner.jpg">
+        <img src="myBanner.jpg">
+">
             </tr>
             </thead>
         </table>
