--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <title> My Portfolio <br> Jimmy Zhang </title>
     </head>
+    <style>
+        body {background-color:blue;
+        }
+    </style>
     <body>
         </tr>
             </thead>
