--- a/apps.html
+++ b/apps.html
@@ -35,7 +35,7 @@
         </a>
                     <th> 
                          <a href="https://xxxseraphxxx.github.io/jimmyzhang1/about.html">
-        <img src="about.png"></th>
+        <img src="about.jpg"></th>
         </a>
                 </tr>
             </thead>
