--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <style>
         body {background-color:blue;
         }
+        #my-banner {align:center;}
     </style>
     <body>
         </tr>
             </thead>
         </table>
-        <img src="myBanner.jpg">
+        <img id="my-banner" src="myBanner.jpg">
             </tr>
             </thead>
         </table>
