--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <style>
         body {background-color:blue;
         }
-        #my-banner {align:center;}
+        #my-banner {margin-right:auto;
+            margin-left:auto;
+            width:100%;}
     </style>
     <body>
         </tr>
