--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
         body {background-color:blue;
         }
-        #my-banner {margin-right:auto;
+        #my-banner {display:block;
+            margin-right:auto;
             margin-left:auto;
             width:40%;}
     </style>
