--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
             margin-right:auto;
             margin-left:auto;
             width:20%;}
+        table {display:block;
+            margin-right:auto;
+            margin-left:auto;
+            width:20%;}
     </style>
     <body>
-        </tr>
-            </thead>
-        </table>
+        <tr>
+            <thead>
+        <table>
         <img id="my-banner" src="myBanner.jpg">
             </tr>
             </thead>
