--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             margin-right:auto;
             margin-left:auto;
             width:20%;}
+        h {float:center;}
+        p {float: center;}
     </style>
     <body>
         <tr>
