--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             margin-right:auto;
             margin-left:auto;
             width:25%;}
-        h {float:center;}
+        h1 {float:center;}
         p {float: center;}
     </style>
     <body>
