--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             margin-right:auto;
             margin-left:auto;
             width:25%;}
-        h1 {float:center;}
-        p {float: center;}
+       .center {
+            padding: 70px 0;
+            text-align: center;
     </style>
     <body>
         <tr>
@@ -50,10 +51,11 @@
                 </tr>
             </thead>
         </table>
+       <div class="center">
         <h1>Welcome to Jimmy Zhang Page!
         </h1>
         <p> Welcome to this website where everything here will be about me. First off I think we will be talking about is what I like to do. what i like to do is playing league of legend. Since the beginning I was alway interested in the game World of warcarft, but I could never understand it that why I started out playing league because it was a bit easier to follow the concert of it compare to Wow. Furthermore, I really enjoy the community that it present even though some of them were toxic. However this year I really hope I can learn as must as possible, so one day I can work at Riot Game or Epic game. 
-       
+       </div>
 </p>
     </body>
 </html>
