--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin-right:auto;
             margin-left:auto;
             width:40%;}
-        table {display:block;
+        #bar {display:block;
             margin-right:auto;
             margin-left:auto;
             width:25%;}
@@ -29,7 +29,7 @@
         </table>
 </ul>
         
-        <table>
+        <table id="bar">
             <thead>
                 <tr>
                     <th>
