--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
             margin-right:auto;
             margin-left:auto;
             width:40%;}
-        #bar {display:block;
-            margin-right:auto;
-            margin-left:auto;
-            width:25%;}
+       .bar {
+            padding: 70px 0;
+            text-align: center;
        .center {
             padding: 70px 0;
             text-align: center;
@@ -28,8 +27,8 @@
             </thead>
         </table>
 </ul>
-        
-        <table id="bar">
+        <div class="bar">
+        <table>
             <thead>
                 <tr>
                     <th>
@@ -51,6 +50,7 @@
                 </tr>
             </thead>
         </table>
+        </div>
        <div class="center">
         <h1>Welcome to Jimmy Zhang Page!
         </h1>
