--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             margin-right:auto;
             margin-left:auto;
             width:40%;}
-       .bar {
-            padding: 70px 0;
-            text-align: center;
+        #bar {display:block;
+            margin-right:auto;
+            margin-left:auto;
+            width:40%;}
        .center {
             padding: 70px 0;
             text-align: center;
@@ -27,8 +28,8 @@
             </thead>
         </table>
 </ul>
-        <div class="bar">
-        <table>
+       
+        <table id="bar">
             <thead>
                 <tr>
                     <th>
@@ -50,7 +51,6 @@
                 </tr>
             </thead>
         </table>
-        </div>
        <div class="center">
         <h1>Welcome to Jimmy Zhang Page!
         </h1>
