--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin-left:auto;
             width:40%;}
         #bar {display:block;
-            margin-right:6;
+            margin-right:auto;
             margin-left:auto;
             width:40%;}
        .center {
