--- a/about.html
+++ b/about.html
@@ -4,17 +4,32 @@
         <meta charset="utf-8">
         <title> My Portfolio <br> Jimmy Zhang </title>
     </head>
+    <style>
+        body {background-color:blue;
+        }
+        #my-banner {display:block;
+            margin-right:auto;
+            margin-left:auto;
+            width:40%;}
+        #bar {display:block;
+            margin-right:auto;
+            margin-left:auto;
+            width:40%;}
+       .center {
+            padding: 70px 0;
+            text-align: center;
+    </style>
     <body>
-        </tr>
-            </thead>
-        </table>
+        <tr>
+            <thead>
+        <table>
         <img src="myBanner.jpg">
             </tr>
             </thead>
         </table>
 </ul>
         
-       <table>
+        <table id="bar">
             <thead>
                 <tr>
                     <th>
@@ -36,9 +51,11 @@
                 </tr>
             </thead>
         </table>
-        <h1>Welcome to my Page!
+            <div class="center">
+        <h1>Welcome to Jimmy Zhang Page!
         </h1>
-        <p> welcome to this website where everything here will be about me and what I like to do. When I was in highschool I alway to play League of legend to the point where I want to work at Riot Game as a developer.
-        </p>
+        <p> Welcome to this website where everything here will be about me. First off I think we will be talking about is what I like to do. what i like to do is playing league of legend. Since the beginning I was alway interested in the game World of warcarft, but I could never understand it that why I started out playing league because it was a bit easier to follow the concert of it compare to Wow. Furthermore, I really enjoy the community that it present even though some of them were toxic. However this year I really hope I can learn as must as possible, so one day I can work at Riot Game or Epic game. 
+            </div>
+</p>
     </body>
 </html>
