--- a/javascripts.html
+++ b/javascripts.html
@@ -4,21 +4,36 @@
         <meta charset="utf-8">
         <title> My Portfolio <br> Jimmy Zhang </title>
     </head>
+      <style>
+        body {background-color:blue;
+        }
+        #my-banner {display:block;
+            margin-right:auto;
+            margin-left:auto;
+            width:40%;}
+        #bar {display:block;
+            margin-right:auto;
+            margin-left:auto;
+            width:40%;}
+       .center {
+            padding: 70px 0;
+            text-align: center;
+    </style>
     <body>
-        </tr>
-            </thead>
-        </table>
+        <tr>
+            <thead>
+        <table>
         <img src="myBanner.jpg">
             </tr>
             </thead>
         </table>
 </ul>
         
-        <table>
+        <table id="bar">
             <thead>
                 <tr>
                     <th>
-                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/">
+                        <a href="https://xxxseraphxxx.github.io/jimmyzhang1/">
         <img src="home1.jpg"></th>
         </a>
                     <th> 
@@ -36,8 +51,10 @@
                 </tr>
             </thead>
         </table>
+        <div class="center">
         <h1>Welcome to my Page! 
         </h1>
     <p>Here are some javascripts that I wrote below!</p>
+        <div class="center">
     </body>
 </html>
