--- a/javascripts.html
+++ b/javascripts.html
@@ -8,7 +8,7 @@
         body {background-color:blue;
         }
         #my-banner {display:block;
-            margin-right:auto;
+            margin-right:6px;
             margin-left:auto;
             width:40%;}
         #bar {display:block;
