--- a/javascripts.html
+++ b/javascripts.html
@@ -55,6 +55,7 @@
         <h1>Welcome to my Page! 
         </h1>
     <p>Here are some javascripts that I wrote below!</p>
+            <img src="tokyo5.png">
         <div class="center">
     </body>
 </html>
