--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <tr>
             <thead>
         <table>
-        <img src="myBanner.jpg">
+        <img id="my-banner" src="myBanner.jpg">
             </tr>
             </thead>
         </table>
