--- a/javascripts.html
+++ b/javascripts.html
@@ -56,5 +56,6 @@
         </h1>
             <p>Here are some javascripts that I wrote below!</p>
         <div class="center">
+        <img="toyko5.jpg">
     </body>
 </html>
