--- a/javascripts.html
+++ b/javascripts.html
@@ -56,6 +56,6 @@
         </h1>
             <p>Here are some javascripts that I wrote below!</p>
         <div class="center">
-        <img src="toyko5.jpg">
+        <img src="tokyo5.png">
     </body>
 </html>
