--- a/javascripts.html
+++ b/javascripts.html
@@ -5,9 +5,13 @@
         <title> My Portfolio <br> Jimmy Zhang </title>
     </head>
       <style>
-        body {background-color:blue;
-        }
-        #my-banner {display:block;
+       
+   body {
+	background-image: url("tokyo5.jpg");
+        background-repeat:no-repeat;
+       background-size:cover;
+          }
+          #my-banner {display:block;
             margin-right:auto;
             margin-left:auto;
             width:40%;}
