--- a/javascripts.html
+++ b/javascripts.html
@@ -7,6 +7,7 @@
       <style>
        
    body {
+	   background-color:blue;
 	background-image: url("tokyo5.jpg");
         background-repeat:no-repeat;
        background-size:cover;
