--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
     </head>
     <style>
         body {background-color:blue;
+	background-image: url("tokyo5.jpg");
+        background-repeat:no-repeat;
+       background-size:cover;
         }
         #my-banner {display:block;
             margin-right:auto;
@@ -58,6 +61,6 @@
             
 </div>
 </p>
-<img src="tokyo5.jpg">
+
     </body>
 </html>
