--- a/apps.html
+++ b/apps.html
@@ -6,6 +6,9 @@
     </head>
       <style>
         body {background-color:blue;
+	    background-image: url("tokyo5.jpg");
+        background-repeat:no-repeat;
+       background-size:cover;
         }
         #my-banner {display:block;
             margin-right:auto;
@@ -56,6 +59,5 @@
         </h1>
         <p> Welcome to this website where everything here will be about me. First off I think we will be talking about is what I like to do. what i like to do is playing league of legend. Since the beginning I was alway interested in the game World of warcarft, but I could never understand it that why I started out playing league because it was a bit easier to follow the concert of it compare to Wow. Furthermore, I really enjoy the community that it present even though some of them were toxic. However this year I really hope I can learn as must as possible, so one day I can work at Riot Game or Epic game. 
             </div>
-<img src="tokyo5.jpg">
     </body>
 </html>
