--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {background-color:blue;
 	background-image: url("tokyo5.jpg");
         background-repeat:no-repeat;
-       background-size:width:800;
+       background-size:cover
         }
         #my-banner {display:block;
             margin-right:auto;
