--- a/javascripts.html
+++ b/javascripts.html
@@ -59,7 +59,8 @@
         <div class="center">
         <h1>Welcome to my Page! 
         </h1>
-            <p>Here are some javascripts that I wrote below!</p>
+            <p>Here are some javascripts that I wrote below!
+		<h2></ul><a href="https://www.khanacademy.org/computer-programming/racing-bitmoji/6259506399641600">Racing Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/racing-bitmoji/6259506399641600/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></p>
         <div class="center">
     </body>
 </html>
