--- a/javascripts.html
+++ b/javascripts.html
@@ -63,6 +63,7 @@
             <p>Here are some javascripts that I wrote below!
 		<h2></ul><a href="https://www.khanacademy.org/computer-programming/racing-bitmoji/6259506399641600">Racing Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/racing-bitmoji/6259506399641600/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></p>
         <p><h2><a href="https://www.khanacademy.org/computer-programming/bitmoji/6383121732435968">Bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/bitmoji/6383121732435968/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></p>
+	<p><h2><a href="https://www.khanacademy.org/computer-programming/bitmoji-dance/5707014792249344">Bitmoji dance</a></h2><script src="https://www.khanacademy.org/computer-programming/bitmoji-dance/5707014792249344/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></p>
 <div class="center">
     </body>
 </html>
