--- a/javascripts.html
+++ b/javascripts.html
@@ -5,6 +5,8 @@
         <title> My Portfolio <br> Jimmy Zhang </title>
     </head>
       <style>
+	      h1 { color:red;}
+	      p {color:red;}
        
    body {
 	   background-color:blue;
