--- a/javascripts.html
+++ b/javascripts.html
@@ -63,9 +63,9 @@
         </h1>
 		
             <p>Here are some javascripts that I wrote below!
-		<h2></ul><a href=
-        <p><h2><a href=
-	<p><h2><a href=
+		<h2></ul><img src="My Screen Shoot1.png">
+        <p><h2><img src="My Screen Shoot2.png">
+	<p><h2><img src="My Screen Shoot3.png">
 <div class="center">
     </body>
 </html>
