--- a/javascripts.html
+++ b/javascripts.html
@@ -63,9 +63,9 @@
         </h1>
 		
             <p>Here are some javascripts that I wrote below!
-		<h2></ul><img src="My Screen Shoot1.png">
-        <p><h2><img src="My Screen Shoot 2.png">
-	<p><h2><img src="My Screen Shoot 3.png">
+		<h2></ul><img src="My Screen Shoot1.jpg">
+        <p><h2><img src="My Screen Shoot 2.jpg">
+	<p><h2><img src="My Screen Shoot 3.jpg">
 <div class="center">
     </body>
 </html>
