--- a/javascripts.html
+++ b/javascripts.html
@@ -63,7 +63,7 @@
         </h1>
 		
             <p>Here are some javascripts that I wrote below!
-		<h2></ul><img src="My Screen Shoot1.jpg">
+		<h2></ul><img src="MyScreenShot1.jpg">
         <p><h2> <img src="MyScreenShot2.jpg">
 	<p><h2> <img src="MyScreenShot3.jpg">
 <div class="center">
