--- a/javascripts.html
+++ b/javascripts.html
@@ -63,9 +63,9 @@
         </h1>
 		
             <p>Here are some javascripts that I wrote below!
-		<h2></ul><img src="MyScreenShot1.jpg">
-        <p><h2> <img src="MyScreenShot2.jpg">
-	<p><h2> <img src="MyScreenShot3.jpg">
+		<h2></ul><img src="ScreenShot1.jpg">
+        <p><h2> <img src="ScreenShot2.jpg">
+	<p><h2> <img src="ScreenShot3.jpg">
 <div class="center">
     </body>
 </html>
