--- a/javascripts.html
+++ b/javascripts.html
@@ -68,7 +68,7 @@
 		<h2><a href="https://www.khanacademy.org/computer-programming/zhang_drybitmoji/4635510885023744">zhang_drybitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/zhang_drybitmoji/4635510885023744/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
 		<h2><a href="https://www.khanacademy.org/computer-programming/zhang_educationalapp/4557107524763648">Zhang_EducationalApp</a></h2><script src="https://www.khanacademy.org/computer-programming/zhang_educationalapp/4557107524763648/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
        		<h2><a href="https://www.khanacademy.org/computer-programming/zhang_frogger/5291239145963520">Zhang_frogger</a></h2><script src="https://www.khanacademy.org/computer-programming/zhang_frogger/5291239145963520/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-		<h2><a href="https://www.khanacademy.org/computer-programming/zhang_memory/6363991743889408">zhang_memory</a></h2><script src="https://www.khanacademy.org/computer-programming/zhang_memory/6363991743889408/embed.js?editor=yes&buttons=no&author=no&embed=yes"></script>
+		<h2><a href="https://www.khanacademy.org/computer-programming/zhang_memory/6363991743889408">zhang_memory</a></h2><script src="https://www.khanacademy.org/computer-programming/zhang_memory/6363991743889408/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
 	<p><h2> <img src="ScreenShot2.jpg">
 	<p><h2> <img src="ScreenShot3.jpg">
 <div class="center">
