--- a/Final Program.html
+++ b/Final Program.html
@@ -55,6 +55,10 @@
                          <a href="https://xxxseraphxxx.github.io/jimmyzhang1/about.html">
         <img src="about1.jpg"></th>
         </a>
+	            <th> 
+                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/about.html">
+        <img src="fp.jpg"></th>
+        </a>
                 </tr>
             </thead>
         </table>
