--- a/Final Program.html
+++ b/Final Program.html
@@ -56,7 +56,7 @@
         <img src="about1.jpg"></th>
         </a>
 	            <th> 
-                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/about.html">
+                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/finalproject.html">
         <img src="fp.jpg"></th>
         </a>
                 </tr>
