--- a/about.html
+++ b/about.html
@@ -51,6 +51,10 @@
                          <a href="https://xxxseraphxxx.github.io/jimmyzhang1/about.html">
         <img src="about1.jpg"></th>
         </a>
+			<th> 
+                         <a href="https://xxxseraphxxx.github.io/jimmyzhang1/finalproject.html">
+        <img src="fp.jpg"></th>
+        </a>
                 </tr>
             </thead>
         </table>
