--- a/finalproject.html
+++ b/finalproject.html
@@ -67,10 +67,10 @@
         </h1>
 		
             <p>Here are some javascripts that I wrote below!
-	    <p>Hey there you want to play a short game? If so let go! In this game the player we start off with the front cover, where we can see the basic background story that give you guise of the game. As you press start it like opening a door to the game. Within this game we have a road, sidewalk, his lawn and his house, but across from the bitmoji there is the store that his mom told him to go to get some chicken. But he is worried, so he told his helmet and tries to cross the street. In the game, if he gets hit by the rocket car he will get -2 points as well as -20 health, however if he gets hit with the honeycomb car he will get +1 point and restore 10 heath. Despite all that, the main goal is to get 5 or more points you ultimately win the game, and the best way to accomplish that is to go up and down the canvas to get the most points, which is plus +3. That all folks.  
+	    <p>Hey there you want to play a short game? If so let go! In this game the player we start off with the front cover, where we can see the basic background story that give you guise of the game. As you press start it like opening a door to the game. Within this game we have a road, sidewalk, his lawn and his house, but across from the bitmoji there is the store that his mom told him to go to get some chicken. But he is worried, so he told his helmet and tries to cross the street. In the game, if he gets hit by the rocket car he will get -2 points as well as -20 health, however if he gets hit with the honeycomb car he will get +1 point and restore 10 heath. Despite all that, the main goal is to get 5 or more points you ultimately win the game, and the best way to accomplish that is to go up and down the canvas to get the most points, which is plus +3. That all folks. Oh and if your Heath bar hit 0 you lose.  
 		<p> THANK YOU FOR PLAYING AND LISTENING :)
 		<h2><a href="https://www.khanacademy.org/computer-programming/final-project/5869806779645952">Final Project</a></h2><script src="https://www.khanacademy.org/computer-programming/final-project/5869806779645952/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-		
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/5LhRuXdFgqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div class="center">
     </body>
 </html>
