--- a/finalproject.html
+++ b/finalproject.html
@@ -6,7 +6,7 @@
     </head>
       <style>
 	      h1 { color:red;}
-	      p {color:red;}
+	      p {color:black;}
        
    body {
 	   background-color:blue;
